--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,51 @@ hr {
   border-radius: 0px;
 }
 
+.circle_spread_btn {
+  display: inline-block;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  background: #40C659;
+  border-radius: 50%;
+}
+.circle_spread_btn:hover {
+   cursor: pointer;
+   text-decoration: none;
+  text-align: center;
+   transition: transform .3s;
+  transform-origin: center;
+  transform: scale(0.9, 0.9);
+  opacity: 0.7;
+}
+.circle_spread_btn::after {
+    display: inline-block;
+    content: "";
+    width: 49px;
+    height: 49px;
+    position: absolute;
+   border-radius: 50%;
+  color:#fff;
+   top: -0.5px;
+   left: -0.5px;
+    border: 1px solid #40C659;
+   transition: transform .5s ease;
+  visibility: hidden;
+}
+.circle_spread_btn:hover::after {
+   cursor: pointer;
+   text-decoration: none;
+   transition: transform .5s ease;
+  transform-origin: center;
+  transform: scale(1.4, 1.4);
+  opacity: 0.7;
+  visibility: visible;
+}
+
 .lead {
   letter-spacing: 1px;
 }
@@ -342,4 +387,14 @@ hr {
 
 .credits {
   color: #999;
+}
+
+#startButton {
+  background-color: #74cfae;
+  color: white;
+}
+
+#stopButton {
+  background-color: #74cfae;
+  color: white;
 }
